--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,11 @@
         </p>
       </div>
 
-      <div class="header__content">
-        <a href="#" class="header__burger-menu">
-          <img src="./icons/burger-menu-icon.svg" alt="menu">
-        </a>
+      <a href="#menu" class="header__burger-menu">
+        <img src="./icons/burger-menu-icon.svg" alt="menu">
+      </a>
 
+      <div class="header__content">
         <h1 class="header__tittle">
           ХУДОЖНІЙ МУЗЕЙ
         </h1>
@@ -70,7 +70,70 @@
       </div>
     </header>
 
-    <main class="body__main">
+    <menu class="menu" id="menu">
+      <a class="menu__close" href="#">
+        <img src="./icons/close-icon.svg" alt="close">
+      </a>
+
+      <div class="menu__content">
+        <nav class="menu__nav">
+          <a href="#" class="menu__nav-link menu__nav-link--1">
+            Галерея
+          </a>
+
+          <a href="#" class="menu__nav-link menu__nav-link--2">
+            Виставки та події
+          </a>
+
+          <a href="#" class="menu__nav-link menu__nav-link--3">
+            Про нас
+          </a>
+
+          <a href="#" class="menu__nav-link menu__nav-link--4">
+            Контакти
+          </a>
+        </nav>
+
+        <div class="menu__line"></div>
+
+        <div class="menu__schedule">
+          <div class="menu__workingDays">
+            <p class="menu__schedule-tittle">Графік роботи</p>
+
+            <div class="menu__workingDay">
+              <p class="menu__hours">12:00 — 20:00</p>
+              <p class="menu__day">середа</p>
+            </div>
+
+            <div class="menu__workingDay">
+              <p class="menu__hours">12:00 — 20:00</p>
+              <p class="menu__day">четвер</p>
+            </div>
+
+            <div class="menu__workingDay">
+              <p class="menu__hours">12:00 — 20:00</p>
+              <p class="menu__day">п’ятниця</p>
+            </div>
+
+            <div class="menu__workingDay">
+              <p class="menu__hours">11:00 — 19:00</p>
+              <p class="menu__day">субота</p>
+            </div>
+
+            <div class="menu__workingDay">
+              <p class="menu__hours">11:00 — 19:00</p>
+              <p class="menu__day">неділя </p>
+            </div>
+          </div>
+
+          <p class="menu__daysOff">
+            <strong>Вихідні:</strong> понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+    </menu>
+
+    <main class="main">
       <section class="relevant" id="relevant">
         <div class="relevant__tittle-wraper">
           <h3 class="relevant__tittle">
@@ -180,7 +243,161 @@
           <div class="gallery__photo gallery__photo--4"></div>
         </div>
       </section>
+
+      <section class="subscription">
+        <div class="subscription__bg">
+          <div class="subscription__contentWrapper">
+            <div class="subscription__content">
+              <h3 class="subscription__tittle">
+                Підписка
+              </h3>
+              <p class="subscription__description">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+              <form
+                action="#"
+                method="post"
+                class="subscription__form"
+              >
+                <input
+                  class="subscription__email"
+                  type="email"
+                  placeholder="E-mail"
+                  required
+                >
+
+                <div class="email-error-message">
+                  use format "user@mailbox"
+                </div>
+
+                <button class="subscription__submit" type="submit">
+                  <img src="./icons/button-pointer-icon.svg" alt="pointer">
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__icons">
+        <a href="#" class="footer__logo">
+          NA
+          <br>
+          MU
+        </a>
+
+        <div class="footer__socialMedia">
+          <a href="https://www.facebook.com/">
+            <img src="./icons/facebook-icon-24x24.svg" alt="facebook.ico">
+          </a>
+
+          <a href="https://www.instagram.com/">
+            <img src="./icons/instagram-icon-24x24.svg" alt="instagram.ico">
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__schedule">
+        <p class="footer__schedule-tittle">Графік роботи</p>
+
+        <div class="footer__workingDay">
+          <p class="footer__hours">12:00 — 20:00</p>
+
+          <p class="footer__day">середа</p>
+        </div>
+
+        <div class="footer__workingDay">
+          <p class="footer__hours">12:00 — 20:00</p>
+
+          <p class="footer__day">четвер</p>
+        </div>
+
+        <div class="footer__workingDay">
+          <p class="footer__hours">12:00 — 20:00</p>
+          <p class="footer__day">п’ятниця</p>
+        </div>
+
+        <div class="footer__workingDay">
+          <p class="footer__hours">11:00 — 19:00</p>
+          <p class="footer__day">субота</p>
+        </div>
+
+        <div class="footer__workingDay">
+          <p class="footer__hours">11:00 — 19:00</p>
+          <p class="footer__day">неділя </p>
+        </div>
+
+
+        <p class="footer__daysOff">
+          <br>
+          <strong>Вихідні:</strong> понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+        </p>
+      </div>
+
+      <div class="footer__contacts">
+        <p class="footer__contacts-tittle">Контакти:</p>
+
+        <p class="footer__address">
+          <a  class="footer__link" href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.4494431,30.528179,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?authuser=0&entry=ttu">
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+        </p>
+
+        <a class="footer__link" href="tel:+380442781357">
+          тел. +38 (044) 278-13-57
+        </a>
+
+        <a class="footer__link" href="tel:+380442781357">
+          факс +38 (044) 278-74-54
+        </a>
+
+        <a class="footer__link" href="mailto:info@namu.kiev.ua">
+          e-mail:info@namu.kiev.ua
+        </a>
+      </div>
+
+      <div class="footer__line"></div>
+
+      <nav class="footer__nav">
+        <a href="#" class="footer__nav-link footer__nav-link--1">
+          Галерея
+        </a>
+
+        <a href="#" class="footer__nav-link footer__nav-link--2">
+          Виставки та події
+        </a>
+
+        <a href="#" class="footer__nav-link footer__nav-link--3">
+          Про нас
+        </a>
+
+        <a href="#" class="footer__nav-link footer__nav-link--4">
+          Контакти
+        </a>
+      </nav>
+
+      <div class="footer__rights">
+        <p class="footer__designedBy">
+          Designed by Zhyriada Marina
+        </p>
+
+        <p class="footer__copyright">
+          Copyright © 2023. All Rights Reserved.
+        </p>
+      </div>
+
+      <div class="buttonUp">
+        <a class="buttonUp__ellipse" href="#">
+          <img src="./icons/ellipse-for-buttonUp.svg" alt="buttonUp">
+        </a>
+        <a class="buttonUp__arrow" href="#">
+          <img src="./icons/arrow-for-buttonUp.svg" alt="buttonUp">
+        </a>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
       const swiper = new Swiper('.swiper', {
