finished mobile version and implemented tablet version

--- a/src/index.html
+++ b/src/index.html
@@ -23,29 +23,24 @@
       <div class="container">
         <div class="header__menu__top-actions">
           <a href="#menu" class="cross__icon icon"></a>
-          <div class="menu__content">
-            <div class="menu__column">
-              <a href="#gallery" class="menu__link">Галерея</a>
-              <a href="#events" class="menu__link">Виставки та події</a>
+          <div class="header__menu__content">
+            <div class="header__menu__column">
+              <a href="#gallery" class="header__menu__link">Галерея</a>
+              <a href="#events" class="header__menu__link">Виставки та події</a>
             </div>
-            <div class="menu__column">
-              <a href="#events" class="menu__link">Про Нас</a>
-              <a href="#contacts" class="menu__link">Контакти</a>
+            <div class="header__menu__column">
+              <a href="#events" class="header__menu__link">Про Нас</a>
+              <a href="#contacts" class="header__menu__link">Контакти</a>
             </div>
           </div>
         </div>
         <div class="header__menu__schedule">
           <p class="schedule-title">Графік роботи</p>
-          <strong class="header__menu__schedule-time">12:00-20:00</strong>
-          середа
-          <strong class="header__menu__schedule-time">12:00-20:00</strong>
-          четвер
-          <strong class="header__menu__schedule-time">12:00-20:00</strong>
-          п'ятниця
-          <strong class="header__menu__schedule-time">11:00-19:00</strong>
-          субота
-          <strong class="header__menu__schedule-time">11:00-19:00</strong>
-          неділя
+          <div class="header__menu__schedule-time"><strong class="bold-text">12:00-20:00 &nbsp</strong>середа</div>
+          <div class="header__menu__schedule-time"><strong class="bold-text">12:00-20:00 &nbsp</strong>четвер</div>
+          <div class="header__menu__schedule-time"><strong class="bold-text">12:00-20:00 &nbsp</strong>п'ятниця</div>
+          <div class="header__menu__schedule-time"><strong class="bold-text">11:00-19:00 &nbsp</strong>субота</div>
+          <div class="header__menu__schedule-time"><strong class="bold-text">11:00-19:00 &nbsp</strong>неділя</div>
           <div class="header__menu__schedule-details"><strong>Вихідні:</strong> понеділок, вівторок. <br> Каса припиняє роботу за 1 годину до закриття музею</div>
         </div>
       </div>
@@ -75,7 +70,7 @@
           <h3 class="events-card__title">Йду і повертаюсь</h3>
           <div class="events-card__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
         </div>
-        <div class="events-card">
+        <div class="events-card events-card__last">
           <img
             src="./images/blocks/events/img-2.png"
             alt="events 1"
