fixed last commits

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <header class="header" id="header-id">
       <div class="header__container">
         <a
-          href="https://namu.kiev.ua/ua/"
+          href="#main-id"
           class="link"
         >
           <p class="header__logo">
@@ -440,19 +440,19 @@
           </p>
 
           <p class="footer__p">
-            <a href="tel:+38(044)-278-13-57" class=" link footer__day">
+            <a href="tel:+38(044)-278-13-57" class=" link footer__day footer__day-1">
              тел. +38 (044) 278-13-57 <br>
             </a>
           </p>
 
           <p class="footer__p">
-            <a href="tel:+38(044)-278-74-54" class="link footer__day">
+            <a href="tel:+38(044)-278-74-54" class="link footer__day footer__day-2">
              факс +38 (044) 278-74-54 <br>
             </a>
           </p>
 
           <p class="footer__p">
-            <a href="mailto:info@namu.kiev.ua" class="link footer__day">
+            <a href="mailto:info@namu.kiev.ua" class="link footer__day footer__day-3">
               e-mail: info@namu.kiev.ua <br>
             </a>
           </p>
