--- a/src/index.html
+++ b/src/index.html
@@ -45,15 +45,15 @@
       </h1>
 
       <div class="header__box">
-        <div class="header__tickets">
-          КВИТКИ
-        </div>
-
+        <a class="header__box-link" href="#footer-id">
+          <div class="header__tickets">
+            КВИТКИ
+          </div>
+        </a>
         <form class="header__form">
           <button
             type="submit"
             class="header__button"
-            onsubmit="this.reset(); return false;"
           >
             <img
               src="./images/string_for_button(white).png"
@@ -70,7 +70,6 @@
           class="header__cross"
           alt="опис фото"
         >
-
         <p class="header__text">
           події
         </p>
@@ -432,7 +431,7 @@
             <a
               href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?hl=ru"
               target="_blank"
-              class="link footer__day"
+              class="link footer__day footer__day-4"
               rel="noreferrer noopener "
             >
               вул. М. Грушевського, 6; <br> Київ, 01001 <br>
