fixed last commits

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <header class="header" id="header-id">
       <div class="header__container">
         <a
-          href="#main-id"
+          href="#home-id"
           class="link"
         >
           <p class="header__logo">
@@ -45,7 +45,7 @@
       </h1>
 
       <div class="header__box">
-        <a class="header__box-link" href="#footer-id">
+        <a class="header__box-link" href="#main-id">
           <div class="header__tickets">
             КВИТКИ
           </div>
@@ -55,11 +55,13 @@
             type="submit"
             class="header__button"
           >
-            <img
-              src="./images/string_for_button(white).png"
-              class="header__button-string"
-              alt="опис фото"
-            >
+            <a class="header__button-link" href="#main-id">
+              <img
+                src="./images/string_for_button(white).png"
+                class="header__button-string"
+                alt="опис фото"
+              >
+            </a>
           </button>
         </form>
       </div>
