--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
-    <link rel="icon" href="./icons/favicon-32x32.png" type="image/x-icon">
+    <link
+      rel="icon"
+      href="./icons/favicon-32x32.png"
+      type="image/x-icon"
+    >
     <link
       rel="shortcut icon"
       href="./icons/favicon-32x32.png"
@@ -29,14 +33,16 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="body">
-    <header class="header">
+    <header class="header" id="header">
 
       <div class="header__image">
-        <p class="header__logo">
-          NA
-          <br>
-          MU
-        </p>
+        <div class="header__logo-wrapper">
+          <a href="#" class="header__logo">
+            NA
+            <br>
+            MU
+          </a>
+        </div>
       </div>
 
       <a href="#menu" class="header__burger-menu">
@@ -77,19 +83,21 @@
 
       <div class="menu__content">
         <nav class="menu__nav">
-          <a href="#" class="menu__nav-link menu__nav-link--1">
+          <a href="#gallery" class="menu__nav-link menu__nav-link--1">
             Галерея
           </a>
 
-          <a href="#" class="menu__nav-link menu__nav-link--2">
-            Виставки та події
+          <a href="#relevant" class="menu__nav-link menu__nav-link--2">
+            Виставки та
+            <br>
+            події
           </a>
 
-          <a href="#" class="menu__nav-link menu__nav-link--3">
+          <a href="#subscription" class="menu__nav-link menu__nav-link--3">
             Про нас
           </a>
 
-          <a href="#" class="menu__nav-link menu__nav-link--4">
+          <a href="#footer" class="menu__nav-link menu__nav-link--4">
             Контакти
           </a>
         </nav>
@@ -142,7 +150,9 @@
         </div>
 
         <div class="action action--one">
-          <div class="action__image action__image--one"></div>
+          <div class="action__image-wrapper">
+            <div class="action__image action__image--one"></div>
+          </div>
 
           <div class="action__content">
             <div class="details">
@@ -170,7 +180,9 @@
         </div>
 
         <div class="action action--two">
-          <div class="action__image action__image--two"></div>
+          <div class="action__image-wrapper">
+            <div class="action__image action__image--two"></div>
+          </div>
 
           <div class="action__content">
             <div class="details">
@@ -237,14 +249,25 @@
         </div>
 
         <div class="gallery__photos">
-          <div class="gallery__photo gallery__photo--1"></div>
-          <div class="gallery__photo gallery__photo--2"></div>
-          <div class="gallery__photo gallery__photo--3"></div>
-          <div class="gallery__photo gallery__photo--4"></div>
+          <div class="gallery__photo-wrapper gallery__photo-wrapper--1">
+            <div class="gallery__photo gallery__photo--1"></div>
+          </div>
+
+          <div class="gallery__photo-wrapper gallery__photo-wrapper--2">
+            <div class="gallery__photo gallery__photo--2"></div>
+          </div>
+
+          <div class="gallery__photo-wrapper gallery__photo-wrapper--3">
+            <div class="gallery__photo gallery__photo--3"></div>
+          </div>
+
+          <div class="gallery__photo-wrapper gallery__photo-wrapper--4">
+            <div class="gallery__photo gallery__photo--4"></div>
+          </div>
         </div>
       </section>
 
-      <section class="subscription">
+      <section class="subscription" id="subscription">
         <div class="subscription__bg">
           <div class="subscription__contentWrapper">
             <div class="subscription__content">
@@ -260,7 +283,8 @@
                 class="subscription__form"
               >
                 <input
-                  class="subscription__email"
+                  name="email"
+                  class="subscription__input"
                   type="email"
                   placeholder="E-mail"
                   required
@@ -270,7 +294,10 @@
                   use format "user@mailbox"
                 </div>
 
-                <button class="subscription__submit" type="submit">
+                <button
+                  class="subscription__submit"
+                  type="submit"
+                >
                   <img src="./icons/button-pointer-icon.svg" alt="pointer">
                 </button>
               </form>
@@ -280,7 +307,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="footer__icons">
         <a href="#" class="footer__logo">
           NA
@@ -289,11 +316,11 @@
         </a>
 
         <div class="footer__socialMedia">
-          <a href="https://www.facebook.com/">
+          <a href="https://www.facebook.com/" class="footer__socialMedia-facebook">
             <img src="./icons/facebook-icon-24x24.svg" alt="facebook.ico">
           </a>
 
-          <a href="https://www.instagram.com/">
+          <a href="https://www.instagram.com/" class="footer__socialMedia-instagram">
             <img src="./icons/instagram-icon-24x24.svg" alt="instagram.ico">
           </a>
         </div>
@@ -340,7 +367,11 @@
         <p class="footer__contacts-tittle">Контакти:</p>
 
         <p class="footer__address">
-          <a  class="footer__link" href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.4494431,30.528179,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?authuser=0&entry=ttu">
+          <a
+            target="_blank"
+            class="footer__link"
+            href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.4494431,30.528179,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?authuser=0&entry=ttu"
+          >
             вул. М. Грушевського, 6; Київ, 01001
           </a>
         </p>
@@ -361,19 +392,19 @@
       <div class="footer__line"></div>
 
       <nav class="footer__nav">
-        <a href="#" class="footer__nav-link footer__nav-link--1">
+        <a href="#gallery" class="footer__nav-link footer__nav-link--1">
           Галерея
         </a>
 
-        <a href="#" class="footer__nav-link footer__nav-link--2">
+        <a href="#relevant" class="footer__nav-link footer__nav-link--2">
           Виставки та події
         </a>
 
-        <a href="#" class="footer__nav-link footer__nav-link--3">
+        <a href="#subscription" class="footer__nav-link footer__nav-link--3">
           Про нас
         </a>
 
-        <a href="#" class="footer__nav-link footer__nav-link--4">
+        <a href="#footer" class="footer__nav-link footer__nav-link--4">
           Контакти
         </a>
       </nav>
@@ -398,7 +429,10 @@
       </div>
     </footer>
 
+    <script type="text/javascript" src="scripts/main.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <script>
       const swiper = new Swiper('.swiper', {
         pagination: {
@@ -410,6 +444,5 @@
         freeMode: true,
       });
     </script>
-    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
