--- a/src/index.html
+++ b/src/index.html
@@ -56,12 +56,14 @@
 
         <div class="buttonTickets">
           <div class="buttonTickets__text-wraper">
-            <a href="#" class="buttonTickets__text">
+            <a
+              href="#relevant"
+              class="buttonTickets__text">
               КВИТКИ
             </a>
           </div>
 
-          <a href="#" class="buttonTickets__pointer">
+          <a href="#relevant" class="buttonTickets__pointer">
             <img src="./icons/button-pointer-icon.svg" alt="pointer">
           </a>
         </div>
@@ -316,11 +318,19 @@
         </a>
 
         <div class="footer__socialMedia">
-          <a href="https://www.facebook.com/" class="footer__socialMedia-facebook">
+          <a
+            target="_blank"
+            href="https://www.facebook.com/"
+            class="footer__socialMedia-facebook"
+          >
             <img src="./icons/facebook-icon-24x24.svg" alt="facebook.ico">
           </a>
 
-          <a href="https://www.instagram.com/" class="footer__socialMedia-instagram">
+          <a
+            target="_blank"
+            href="https://www.instagram.com/"
+            class="footer__socialMedia-instagram"
+          >
             <img src="./icons/instagram-icon-24x24.svg" alt="instagram.ico">
           </a>
         </div>
