--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,394 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="images/details/textNAMU.svg">
+    <title>Museum</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+
+    <header class="header" id="home">
+
+      <div>
+        <a href="#" class="header__img"></a>
+        <a href="#" class="header__museum">
+          <img
+            class="header__museum--logo"
+            src="./images/details/textNAMU.svg"
+            alt="logo"
+          >
+        </a>
+      </div>
+
+      <div class="container">
+        <div class="header__wrapper">
+
+          <div class="header__top">
+            <a href="#menu" class=" icon icon--menu header__menu-opener"></a>
+            <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
+          </div>
+
+          <div class="header__main">
+            <div class="header__verticalText">ПОДІЇ</div>
+            <div class="header__button">
+              <a class="header__link" href="#">
+                <span class="header__tickets">
+                  КВИТКИ
+                </span>
+              </a>
+
+              <a class="header__btn" href="#"></a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+
+        <div class="menu__content">
+
+          <div class="menu__header">
+
+            <a href="#" class="menu__close"></a>
+
+            <div class="menu__topBlock">
+
+              <div class="menu__list">
+                <div class="menu__list--top">
+                  <li class="menu__item">
+                    <a href="#gallery" class="menu__link">Галерея</a>
+                  </li>
+
+                  <li class="menu__item">
+                    <a href="#event" class="menu__link">Виставки та <br> події </a>
+                  </li>
+                </div>
+
+                <div class="menu__list--bottom">
+                  <li class="menu__item">
+                    <a href="#aboutUs" class="menu__link">Про нас</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#contacts" class="menu__link">Контакти</a>
+                  </li>
+                </div>
+              </div>
+            </div>
+
+            <hr class="menu__hr">
+
+            <div class="menu__work work">
+              <div class="work--wrapper">
+                <h4 class="work__title">Графік роботи</h4>
+                <div class="work__title--list">
+                  <li> <span>12:00 — 20:00</span> середа</li>
+                  <li><span>12:00 — 20:00</span> четвер</li>
+                  <li><span>12:00 — 20:00</span> п’ятниця</li>
+                  <li><span>11:00 — 19:00</span> субота</li>
+                  <li><span>11:00 — 19:00</span> неділя</li>
+                </div>
+              </div>
+
+              <div class="work__add">
+                <p class="work__text"> <span>Вихідні:</span>
+                  понеділок, вівторок <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+
+    <main class="main">
+      <div class="container">
+        <div class="main__container" id="event">
+          <h2 class="title">Актуальні події</h2>
+
+          <div class="main__content">
+            <div class="main__events">
+
+              <img
+                class="main__img"
+                src="/images/picture/pic1.svg"
+                alt="pic"
+              >
+
+              <div class="main__text text">
+
+                <div class="text__exhibition">
+                  <p class="text__exhibition--title">ВИСТАВКА</p>
+                  <p class="text__exhibition--subtitle">26.08-29.11.2019</p>
+                </div>
+
+                <p class="text__title">Йду і повертаюсь</p>
+                <p class="text__subtitle">Національний Художній Музей України презентує
+                унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+
+              </div>
+            </div>
+
+            <div class="main__events top">
+
+              <img
+                class="main__img"
+                src="/images/picture/pic2.svg"
+                alt="pic"
+              >
+
+              <div class="main__text text">
+
+                <div class="text__exhibition">
+                  <p class="text__exhibition--title">ВИСТАВКА</p>
+                  <p class="text__exhibition--subtitle">26.08-29.11.2019</p>
+                </div>
+
+                <p class="text__title">І спогади і мрії</p>
+                <p class="text__subtitle">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="main__bg bg">
+
+        <img
+          class="bg__img"
+          src="/images/picture/pic3.svg"
+          alt="bg"
+        >
+
+        <div class="bg__text">
+          <div class="bg__exhibition">
+            <p class="bg__exhibition--title">ЛЕКЦІЯ</p>
+            <p class="bg__exhibition--subtitle">26/08/2019 - 11:00</p>
+          </div>
+
+          <p class="bg__title">Від класицизму до романтизму</p>
+        </div>
+
+      </div>
+    </main>
+
+    <section class="gallery" id="gallery">
+      <div class="container">
+        <h2 class="title">Галерея</h2>
+        <div class="galler__wrapper">
+          <div class="gallery__content">
+
+            <div class="gallery__image">
+              <div class="gallery__img gallery__img--1"></div>
+              <div class="gallery__img gallery__img--2"></div>
+              <div class="gallery__img gallery__img--3"></div>
+              <div class="gallery__img gallery__img--4"></div>
+            </div>
+
+          </div>
+
+          <label class="gallery__list">
+            <input
+              class="gallery__radio"
+              type="radio"
+              name="switch"
+              id="radio1"
+              checked
+            >
+            <input
+              class="gallery__radio"
+              type="radio"
+              name="switch"
+              id="radio2"
+            >
+            <input
+              class="gallery__radio"
+              type="radio"
+              name="switch"
+              id="radio3"
+            >
+            <input
+              class="gallery__radio"
+              type="radio"
+              name="switch"
+              id="radio4"
+            >
+          </label>
+        </div>
+      </div>
+    </section>
+
+    <section class="subscription" id="aboutUs">
+      <div class="container">
+        <div class="subscription__wrapper">
+          <div class="subscription__title">Підписка</div>
+
+          <div class="subscription__subtitle">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+          <div class="subscription__button">
+            <form
+              action="#"
+              method="post"
+              class="subscription__forms"
+              id="MyForm"
+            >
+              <div>
+                <label for="email"></label>
+                <input type="email"
+                        name="email"
+                        placeholder="E-mail"
+                        id="email"
+                        required
+                        class="subscription__email"
+                        autocomplete="email"
+                >
+              </div>
+              <button
+                class="subscription__btn"
+                id="send"
+                type="submit">
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__content">
+            <div class="footer__logo">
+              <a href="#">
+                <img
+                class="footer__logo--img"
+                src="./images/details/textNAMU.svg"
+                alt="logoNAMU"
+              >
+              </a>
+
+
+              <div class="footer__net">
+                <a href="https://uk-ua.facebook.com/" target="_blank">
+                  <img
+                    class="footer__net--facebook"
+                    src="./images/details/facebook.svg"
+                    alt="facebook"
+                  >
+                </a>
+
+                <a href="https://www.instagram.com/accounts/login/" target="_blank">
+                  <img
+                    class="footer__net--inst"
+                    src="./images/details/instagram.svg"
+                    alt="instagram"
+                  >
+                </a>
+
+              </div>
+            </div>
+
+            <div class="footer__schedule schedule">
+
+              <div class="footer__schedule--time">
+                <p class="schedule__title">Графік роботи</p>
+                <p class="schedule__time">
+                  <span>12:00 — 20:00</span> середа <br>
+                  <span>12:00 — 20:00</span> четвер <br>
+                  <span>12:00 — 20:00</span> п’ятниця <br>
+                  <span>11:00 — 19:00</span> субота <br>
+                  <span>11:00 — 19:00</span> неділя
+                </p>
+                <br>
+                <p class="schedule__text">Вихідні понеділок, вівторок Каса припиняє роботу за 1  годину до закриття музею
+                </p>
+              </div>
+
+              <div class="footer__schedule--contacts">
+                <p class="schedule__contacts">Контакти:</p>
+                <p class="schedule__address">
+
+                  <a
+                    class="schedule__address"
+                    href="https://maps.app.goo.gl/fC5thsDqx1SFPf7e9"
+                    target="_blank">
+                    вул. М. Грушевського, 6; <br> Київ, 01001 <br>
+                  </a>
+
+                  <a
+                    class="schedule__address"
+                    href="tel:+380442781357">
+                    тел. +38 (044) 278-13-57 <br>
+                  </a>
+
+                  <a
+                    class="schedule__address"
+                    href="tel:+380442787454">
+                    факс +38 (044) 278-74-54 <br>
+                  </a>
+
+                  <a
+                    class="schedule__address"
+                    href="mailto">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </p>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="footer__line">
+            <a
+              href="#"
+              id="#home"
+              class="footer__up">
+            </a>
+          </div>
+          <hr class="shedule__hr">
+
+          <div class="footerMenu">
+            <div class="footerMenu__list--top">
+              <li class="footerMenu__item">
+                <a href="#gallery" class="footerMenu__link">Галерея</a>
+              </li>
+
+              <li class="footerMenu__item">
+                <a href="#event" class="footerMenu__link">Виставки та події </a>
+              </li>
+            </div>
+
+            <div class="footerMenu__list--bottom">
+              <li class="footerMenu__item">
+                <a href="#aboutUs" class="footerMenu__link">Про нас</a>
+              </li>
+              <li class="footerMenu__item">
+                <a href="#contacts" class="footerMenu__link">Контакти</a>
+              </li>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__author">
+          <p class="footer__author--name">Designed by Zhyriada Marina</p>
+          <p class="footer__author--name">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
