implement tablet version

--- a/src/index.html
+++ b/src/index.html
@@ -21,30 +21,35 @@
     </header>
     <nav class="header__menu-page" id="menu__page">
       <div class="container">
-        <div class="header__menu__top-actions">
-          <a href="#menu" class="cross__icon icon"></a>
-          <div class="header__menu__content">
-            <div class="header__menu__column">
-              <a href="#gallery" class="header__menu__link">Галерея</a>
-              <a href="#events" class="header__menu__link">Виставки та події</a>
-            </div>
-            <div class="header__menu__column">
-              <a href="#events" class="header__menu__link">Про Нас</a>
-              <a href="#contacts" class="header__menu__link">Контакти</a>
+        <div class="header__menu-page__wrapper">
+          <div class="header__menu__top-actions">
+            <a href="#menu" class="cross__icon icon"></a>
+            <div class="header__menu__content">
+              <div class="header__menu__column">
+                <a href="#gallery" class="header__menu__link">Галерея</a>
+                <a href="#events" class="header__menu__link">Виставки та події</a>
+              </div>
+              <div class="header__menu__column">
+                <a href="#events" class="header__menu__link">Про Нас</a>
+                <a href="#contacts" class="header__menu__link">Контакти</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="header__menu__schedule">
-          <p class="schedule-title">Графік роботи</p>
-          <div class="header__menu__schedule-time"><strong class="bold-text">12:00-20:00 &nbsp</strong>середа</div>
-          <div class="header__menu__schedule-time"><strong class="bold-text">12:00-20:00 &nbsp</strong>четвер</div>
-          <div class="header__menu__schedule-time"><strong class="bold-text">12:00-20:00 &nbsp</strong>п'ятниця</div>
-          <div class="header__menu__schedule-time"><strong class="bold-text">11:00-19:00 &nbsp</strong>субота</div>
-          <div class="header__menu__schedule-time"><strong class="bold-text">11:00-19:00 &nbsp</strong>неділя</div>
-          <div class="header__menu__schedule-details"><strong>Вихідні:</strong> понеділок, вівторок. <br> Каса припиняє роботу за 1 годину до закриття музею</div>
+          <div class="header__menu__schedule">
+            <div class="schedule-time__wrapper">
+              <p class="schedule-title">Графік роботи</p>
+              <div class="header__menu__schedule-time"><strong class="bold-text">12:00-20:00 &nbsp</strong>середа</div>
+              <div class="header__menu__schedule-time"><strong class="bold-text">12:00-20:00 &nbsp</strong>четвер</div>
+              <div class="header__menu__schedule-time"><strong class="bold-text">12:00-20:00 &nbsp</strong>п'ятниця</div>
+              <div class="header__menu__schedule-time"><strong class="bold-text">11:00-19:00 &nbsp</strong>субота</div>
+              <div class="header__menu__schedule-time"><strong class="bold-text">11:00-19:00 &nbsp</strong>неділя</div>
+            </div>
+            <div class="header__menu__schedule-details"><strong>Вихідні:</strong> понеділок, вівторок. <br> Каса припиняє роботу за 1 годину до закриття музею</div>
+          </div>
         </div>
       </div>
     </nav>
+
     <main>
       <section class="art-museum container" id="museum">
         <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
@@ -101,11 +106,7 @@
       <section class="gallery container" id="gallery">
         <h2 class="gallery__title">Галерея</h2>
         <div class="gallery__slider">
-          <img
-            class="slider-item"
-            src="./images/blocks/gallery/img-1.png"
-            alt="image 1"
-          >
+          <div class="main__image slider-item"></div>
           <img
             class="slider-item hiden"
             src="./images/blocks/gallery/img-2__wide.jpg"
@@ -129,6 +130,7 @@
           <div class="nav-button-item icon"></div>
         </div>
       </section>
+
       <section class="subscribe" id="subscribe">
         <h2 class="subscribe__title">Підписка</h2>
         <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
@@ -149,8 +151,9 @@
         </form>
       </section>
     </main>
-    <footer class="footer">
-      <div class="footer__top-action">
+
+    <footer class="footer container grid">
+      <div class="footer__top-action grid__item--tablet-1-1">
         <a href="/" class="logo__icon icon"></a>
         <div class="social-links">
           <a
@@ -167,7 +170,7 @@
           </a>
         </div>
       </div>
-      <div class="footer__content-wrapper">
+      <div class="footer__content-wrapper  grid__item--tablet-2-5">
         <div class="footer__content">
           <div class="schedule">
             <p class="schedule-title">Графік роботи</p>
@@ -205,7 +208,7 @@
           <a href="#" class="scroll-up__link icon"></a>
         </div>
       </div>
-      <nav class="footer__menu">
+      <nav class="footer__menu grid__item--tablet-2-4">
         <ul class="menu-list">
           <div class="menu-column">
             <li class="menu-item">
@@ -225,7 +228,7 @@
           </div>
         </ul>
       </nav>
-      <div class="rights-information">
+      <div class="rights-information grid__item--tablet-1-6">
         <p class="rights-information__item">Designed by Zhyriada Marina</p>
         <p class="rights-information__item">Copyright © 2019. All Rights Reserved.</p>
       </div>
