add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,10 @@
       defer
     >
     </script>
-    <!-- <link
-      rel="stylesheet"
-      type="text/css"
-      href="slick/slick.css"
-    />
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 
   </head>
-  <body class="page__body">
+  <body class="page__body" id="page-top">
     <header class="header">
       <div class="container">
         <div class="header__content">
@@ -86,11 +80,10 @@
           </div>
         </div>
       </div>
-      </div>
     </header>
 
     <aside class="page__menu menu" id="menu">
-      <div class="container">
+      <div class="menucontainer">
         <div class="menu__bottom">
           <div class="menu__top">
             <a href="#" class="menu__close">
@@ -108,10 +101,10 @@
               <nav class="nav menu__nav">
                 <ul class="nav__list">
                   <li class="nav__item">
-                    <a class="nav__link" href="#">Галерея</a>
+                    <a class="nav__link" href="#galery">Галерея</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#">Виставки та
+                    <a class="nav__link" href="#exhibitions">Виставки та
                       <br>
                       події
                     </a>
@@ -122,15 +115,17 @@
               <nav class="nav menu__nav">
                 <ul class="nav__list">
                   <li class="nav__item">
-                    <a class="nav__link" href="#">Про нас</a>
+                    <a class="nav__link" href="#about">Про нас</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#">Контакти</a>
+                    <a class="nav__link" href="#contact">Контакти</a>
                   </li>
                 </ul>
               </nav>
             </div>
           </div>
+
+          <!-- <div class="menu__line"></div> -->
 
           <div class="menu__information">
             <div class="menu__work">
@@ -150,8 +145,9 @@
             <div class="menu__content">
               <p class="menu__weekend">
                 <span class="menu__times">Вихідні:</span> понеділок, вівторок
-            Каса припиняє роботу за 1 годину
-            до закриття музею
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
               </p>
             </div>
           </div>
@@ -164,7 +160,7 @@
 
     <main class="main">
       <div class="main__content">
-        <section class="actual" id="actual">
+        <section class="actual" id="exhibitions">
           <div class="container">
             <div class="actual__products">
               <h2 class="section-title">Актуальні події</h2>
@@ -208,15 +204,9 @@
 
 
         <div class="romantic">
-          <div class="romantic__content">
-            <!-- <div class="images">
-              <img
-                class="images__background"
-                src="images/romantic.png"
-                alt="background"
-              >
-            </div> -->
-            <div class="container">
+          <div class="container">
+            <div class="romantic__content">
+
               <div class="romantic__main">
                 <div class="romantic__control">
                   <div class="romantic__top">
@@ -225,36 +215,305 @@
                   </div>
                   <p class="romantic__information">Від класицизму до романтизму</p>
                 </div>
+                <h2 class="romantic__section-title">Галерея</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="slider">
+          <div class="container">
+            <div class="slider__content">
+              <div class="slider__main">
+                <div class="swiper mySwiper">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="images/slider.png" alt="woman"></div>
+                    <div class="swiper-slide"><img src="images/slider1.png" alt="slide"></div>
+                  </div>
+                  <div class="swiper-pagination"></div>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
 
+        <section class="image" id="galery">
+          <div class="container">
+            <div class="image__content">
+              <h2 class="image__section-title">Галерея</h2>
+              <article class="image__slider">
+                <img
+                  class="image__photo"
+                  src="images/slider.png"
+                  alt="photo"
+                >
+                <img
+                  class="image__photos"
+                  src="images/slider1.png"
+                  alt="photo"
+                >
+                <img
+                  class="image__images"
+                  src="images/slider3.png"
+                  alt="photo"
+                >
+                <img
+                  class="image__images"
+                  src="images/slider4.png"
+                  alt="photo"
+                >
+                <img
+                  class="image__images"
+                  src="images/slider5.png"
+                  alt="photo"
+                >
+              </article>
 
-        <!-- <div class="slider single-item">
-          <div class="slider__item">
-            <img src="images/slider.png" alt="nn">
-          </div>
-          <div class="slider__item">
-            <img src="images/slider1.png" alt="nn">
-          </div>
-        </div> -->
+              <div class="image__buttonss">
+                <svg
+                  class="image__button"
+                  xmlns="http://www.w3.org/2000/svg" width="102"
+                  height="9" viewBox="0 0 102 9"
+                  fill="none"
+                >
+                  <circle cx="4.5" cy="4.5"
+                    r="4.5" fill="#1A5A4C"
+                  >
+                    <circle cx="35.5" cy="4.5"
+                      r="4.5" fill="#E0E0E0"
+                    >
+                      <circle cx="66.5" cy="4.5"
+                        r="4.5" fill="#E0E0E0"
+                      >
+                        <circle cx="97.5" cy="4.5"
+                          r="4.5" fill="#E0E0E0"
+                        >
+                </svg>
+              </div>
 
+            </div>
+          </div>
+        </section>
+
+
+        <div class="newsletter">
+          <div class="container" id="about">
+            <div class="newsletter__content">
+              <div class="newsletter__topi">
+
+                <h2 class="newsletter__info">Підписка</h2>
+                <p class="newsletter__information">Бути в курсі всіх актуальних подій та останніх новин.</p>
+              </div>
+
+              <div class="newsletter__contact">
+                <label class="action--input">
+                  <input
+                    class="input"
+                    name="email"
+                    type="email"
+                    placeholder="E-mail"
+                    size="28"
+                    value=" "
+                    id="myInput"
+                    required
+                  >
+                </label>
+                <button
+                  onclick="document.getElementById('myInput').value = ''"
+                  type="reset"
+                  class="newsletter__send"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg" width="24"
+                    height="24" viewBox="0 0 24 24"
+                    fill="none"
+                  >
+                    <g clip-path="url(#clip0_320_209)">
+                      <path d="M8.59 16.59L13.17 12L8.59 7.41L10 6L16 12L10 18L8.59 16.59Z" fill="black"></path>
+                    </g>
+                    <defs>
+                      <clippath id="clip0_320_209">
+                        <rect width="24" height="24"
+                          fill="white"
+                        >
+                      </clippath>
+                    </defs>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       </div>
     </main>
 
 
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__logo">
+            <a class="footer__logo-link" href="#">
+              <p class="footer__logo-text">
+                NA
+                <br>
+                MU
+              </p>
+            </a>
+            <div class="footer__icon">
+              <a href="https://uk-ua.facebook.com/">
+                <svg
+                  class="footer__facebook"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24" height="24"
+                  viewBox="0 0 24 24" fill="none">
+                  <g clip-path="url(#clip0_320_220)">
+                    <path d="M8.80699 4.64899C8.80699 5.2538 8.80699 7.9533 8.80699 7.9533H6.38992V11.9938H8.80699V24.0009H13.7722V11.9942H17.104C17.104 11.9942 17.4161 10.0568 17.5673 7.93841C17.1337 7.93841 13.7909 7.93841 13.7909 7.93841C13.7909 7.93841 13.7909 5.58776 13.7909 5.17573C13.7909 4.76282 14.3323 4.2074 14.8674 4.2074C15.4014 4.2074 16.5286 4.2074 17.5726 4.2074C17.5726 3.65727 17.5726 1.75647 17.5726 0.000976577C16.1789 0.000976577 14.5933 0.000976577 13.8944 0.000976577C8.68426 0.000697581 8.80699 4.04524 8.80699 4.64899Z" fill="black"></path>
+                  </g>
+                  <defs>
+                    <clippath id="clip0_320_220">
+                      <rect width="23.9626" height="24"
+                      fill="white"
+                    >
+                    </clippath>
+                  </defs>
+                </svg>
+              </a>
+              <a href="https://www.instagram.com/">
+                <svg class="footer__facebook"
+                  xmlns="http://www.w3.org/2000/svg" width="25"
+                  height="24" viewBox="0 0 25 24"
+                  fill="none">
+                  <g clip-path="url(#clip0_320_223)">
+                    <path d="M17.5908 0H6.58397C3.0017 0 0.0874023 2.9143 0.0874023 6.49657V17.5036C0.0874023 21.0857 3.0017 24 6.58397 24H17.591C21.1731 24 24.0874 21.0857 24.0874 17.5036V6.49657C24.0874 2.9143 21.1731 0 17.5908 0V0ZM12.0874 18.5623C8.46886 18.5623 5.52507 15.6185 5.52507 12C5.52507 8.38145 8.46886 5.43767 12.0874 5.43767C15.7059 5.43767 18.6497 8.38145 18.6497 12C18.6497 15.6185 15.7059 18.5623 12.0874 18.5623ZM18.8066 6.98528C17.7373 6.98528 16.8675 6.11553 16.8675 5.04619C16.8675 3.97686 17.7373 3.10693 18.8066 3.10693C19.8759 3.10693 20.7459 3.97686 20.7459 5.04619C20.7459 6.11553 19.8759 6.98528 18.8066 6.98528Z" fill="black"></path>
+                    <path d="M12.0874 6.84473C9.24487 6.84473 6.93207 9.15734 6.93207 12.0001C6.93207 14.8426 9.24487 17.1554 12.0874 17.1554C14.9301 17.1554 17.2427 14.8426 17.2427 12.0001C17.2427 9.15734 14.9301 6.84473 12.0874 6.84473Z" fill="black"></path>
+                    <path d="M18.8066 4.51416C18.5133 4.51416 18.2745 4.75293 18.2745 5.04626C18.2745 5.3396 18.5133 5.57837 18.8066 5.57837C19.1001 5.57837 19.3389 5.33978 19.3389 5.04626C19.3389 4.75275 19.1001 4.51416 18.8066 4.51416Z" fill="black"></path>
+                  </g>
+                  <defs>
+                    <clippath id="clip0_320_223">
+                      <rect width="24" height="24"
+                        fill="white"
+                        transform="translate(0.0874023)"
+                      >
+                    </clippath>
+                  </defs>
+                </svg>
+              </a>
+            </div>
+          </div>
 
+          <div class="footer__work">
+            <h2 class="footer__layoutwork">Графік роботи</h2>
+            <p class="footer__time">
+              <span class="footer__times">12:00— 20:00</span> середа
+              <br>
+              <span class="footer__times">12:00— 20:00</span> четвер
+              <br>
+              <span class="footer__times">12:00 — 20:00</span> п’ятниця
+              <br>
+              <span class="footer__times">11:00 — 19:00</span> субота
+              <br>
+              <span class="footer__times">11:00 — 19:00</span> неділя
+            </p>
+            <p class="footer__weekend">
+              <span class="footer__times">Вихідні:</span>
+              понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
 
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
+          <div class="footer__contact">
+            <h2 class="footer__layoutwork">Контакти</h2>
+            <a
+              class="footer__infos"
+              href="https://maps.app.goo.gl/Em8AtwAbzyjLQcix6"
+              target="_blank"
+            >
+              <br>
+                вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a
+              class="footer__info"
+              href="tel:+380442781357"
+            >
+              <br>
+                тел. +38 (044) 278-13-57
+            </a>
+            <a
+              class="footer__info"
+              href="tel:+380442787454"
+            >
+              <br>
+                факс +38 (044) 278-74-54
+            </a>
+            <a class="footer__info"
+            href="maailto:info@namu.kiev.ua"
+            target="_blank"
+            >
+              <br>
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+          <a class="footer__tops" href="#page-top">
+            <svg
+              xmlns="http://www.w3.org/2000/svg" width="50"
+              height="50" viewBox="0 0 50 50"
+              fill="none"
+            >
+              <circle cx="25" cy="25"
+                r="24.5"
+                stroke="#1A5A4C"
+              >
+            </svg>
+            <svg class="constanta" xmlns="http://www.w3.org/2000/svg"
+              width="16" height="16"
+              viewBox="0 0 16 16" fill="none"
+            >
+              <path d="M8 2L3 7L3.705 7.705L7.5 3.915V14H8.5V3.915L12.295 7.705L13 7L8 2Z" fill="#1A5A4C"></path>
+            </svg>
+          </a>
 
-    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+          <div class="footer__moment">
+            <div class="footer__line"></div>
+          </div>
 
-    <script src="/slick/slick.min.js"></script> -->
+          <div class="footer__inform">
+            <nav class="navigation footer__navigation">
+              <ul class="navigation__list">
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#galery">Галерея</a>
+                </li>
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#exhibitions">Виставки та
+                    <br>
+                    події
+                  </a>
+                </li>
+              </ul>
+            </nav>
 
+            <nav class="navigation menu__navagation">
+              <ul class="navigation__list">
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#about">Про нас</a>
+                </li>
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#contact">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
 
-
+          <div class="footer__reserved">
+            <p class="footer__text">Designed by Zhyriada Marina</p>
+            <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
 </html>
