--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,9 @@
       </div>
 
       <div class="header__right">
-        <h2 class="header__right--text">
+        <a href="#" class="header__right-text">
           NA<br>MU
-        </h2>
+        </a>
       </div>
     </header>
 
@@ -362,7 +362,7 @@
             тел. +38 (044) 278-13-57
           </a>
 
-          <a href="fax: +38 (044) 278-74-54" class="footer__contacts-data-link">
+          <a href="fax:+380442787454" class="footer__contacts-data-link">
             факс +38 (044) 278-74-54
           </a>
 
