--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,14 @@
           <a href="#menu__page" class="menu__icon icon"></a>
           <a href="/" class="logo__icon icon"></a>
         </div>
+        <section class="art-museum" id="museum">
+          <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a href="#" class="art-museum__button">
+            КВИТКИ
+            <div class="art-museum__button-arrow"></div>
+          </a>
+        </section>
+        <a href="#events" class="header__events-link">Події</a>
       </div>
     </header>
     <nav class="header__menu-page" id="menu__page">
@@ -51,13 +59,13 @@
     </nav>
 
     <main>
-      <section class="art-museum container" id="museum">
+      <!--<section class="art-museum container" id="museum">
         <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
         <a href="#" class="art-museum__button">
           КВИТКИ
           <div class="art-museum__button-arrow"></div>
         </a>
-      </section>
+      </section>-->
 
       <section class="events container" id="events">
 
@@ -68,12 +76,14 @@
             alt="events 1"
             class="events-card__image"
           >
-          <div class="events-card__info">
-            <p class="events-card__type">ВИСТАВКА</p>
-            <p class="events-card__schedule">26.08-29.11.2019</p>
+          <div class="events-card__info__wrapper">
+            <div class="events-card__info">
+              <p class="events-card__type">ВИСТАВКА</p>
+              <p class="events-card__schedule">26.08-29.11.2019</p>
+            </div>
+            <h3 class="events-card__title">Йду і повертаюсь</h3>
+            <div class="events-card__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
           </div>
-          <h3 class="events-card__title">Йду і повертаюсь</h3>
-          <div class="events-card__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
         </div>
         <div class="events-card events-card__last">
           <img
@@ -81,12 +91,14 @@
             alt="events 1"
             class="events-card__image"
           >
-          <div class="events-card__info">
-            <p class="events-card__type">ВИСТАВКА</p>
-            <p class="events-card__schedule">26.08-29.11.2019</p>
+          <div class="events-card__info__wrapper">
+            <div class="events-card__info">
+              <p class="events-card__type">ВИСТАВКА</p>
+              <p class="events-card__schedule">26.08-29.11.2019</p>
+            </div>
+            <h3 class="events-card__title">І спогади і мрії</h3>
+            <div class="events-card__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
           </div>
-          <h3 class="events-card__title">І спогади і мрії</h3>
-          <div class="events-card__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
         </div>
       </section>
 
@@ -106,19 +118,19 @@
       <section class="gallery container" id="gallery">
         <h2 class="gallery__title">Галерея</h2>
         <div class="gallery__slider">
-          <div class="main__image slider-item"></div>
+          <div class="main__image slider-item grid__item--desktop-1-4"></div>
           <img
-            class="slider-item hiden"
+            class="slider-item hiden grid__item--desktop-5-12"
             src="./images/blocks/gallery/img-2__wide.jpg"
             alt="image 2"
           >
           <img
-            class="slider-item hiden"
+            class="slider-item hiden grid__item--desktop-1-8"
             src="./images/blocks/gallery/img-3__wide.jpg"
             alt="image 3"
           >
           <img
-            class="slider-item hiden"
+            class="slider-item hiden grid__item--desktop-9-12"
             src="./images/blocks/gallery/img-4__wide.jpg"
             alt="image 4"
           >
