--- a/src/index.html
+++ b/src/index.html
@@ -233,7 +233,8 @@
             <img
               src="images/circle-active.png"
               alt="circle-active"
-              class="gallery__nav-link-pic">
+              class="gallery__nav-link-pic"
+            >
           </a>
 
           <a href="#" class="gallery__nav-link">
@@ -275,7 +276,11 @@
           </div>
 
           <div class="subscription__wrap-forms">
-            <form class="subscription__wrap-forms-form" id="email">
+            <form
+              class="subscription__wrap-forms-form"
+              id="email-form"
+              autocomplete="off"
+            >
               <input
                 type="email"
                 class="subscription__wrap-forms-form-input"
@@ -286,13 +291,13 @@
 
             <button
               class="subscription__wrap-forms-button"
-              form="email"
+              form="email-form"
               type="submit"
             >
               <img
-               src="images/icons/arrow-black.svg"
-               alt="send"
-               class="subscription__wrap-forms-button-placeholder"
+                src="images/icons/arrow-black.svg"
+                alt="send"
+                class="subscription__wrap-forms-button-placeholder"
               >
             </button>
           </div>
@@ -309,7 +314,11 @@
         </a>
 
         <div class="footer__icons-social">
-          <a href="#" class="footer__icons-social-link">
+          <a
+           href="https://www.facebook.com/mist.museum"
+           target="_blank"
+           class="footer__icons-social-link"
+          >
             <img
               src="images/icons/facebook.svg"
               alt="facebook"
@@ -317,7 +326,11 @@
             >
           </a>
 
-          <a href="#" class="footer__icons-social-link">
+          <a
+            href="https://www.instagram.com/mist.museum/"
+            target="_blank"
+            class="footer__icons-social-link"
+          >
             <img
               src="images/icons/instagram .svg"
               alt="instagram"
@@ -354,7 +367,10 @@
         </p>
 
         <div class="footer__contacts-data">
-          <a href="https://maps.app.goo.gl/ATmt4KPzmmUjcuLW7" class="footer__contacts-data-link">
+          <a
+           href="https://maps.app.goo.gl/ATmt4KPzmmUjcuLW7"
+           target="_blank"
+           class="footer__contacts-data-link">
             вул. М. Грушевського, 6; Київ, 01001
           </a>
 
